# sprout-router-classifier

./: .gitignore  AGENTS.md  README.md  cli.py  kaggle_train_transformers.py  pyproject.toml  sync.sh
data/datasets/v1/: split_stats.json  test.csv  val.csv
data/grounding/: unicode_verification.csv
docs/: 00_MASTER_README.md  01_ARCHITECTURE.md  02_DATA_PLAN.md  03_CLASSICAL_ML_PLAN.md  04_TRANSFORMERS_PLAN.md  05_EVALUATION_PLAN.md  06_EXPERIMENT_TRACKING.md  07_FILE_TREE.md  08_WORKFLOW.md  HOW_SYSTEM_PROMPTS_WORK.md  TASKS.md  hellosprout.ai_findings.md
experiments/v1/: cost_simulation.json  eda_summary.json  error_analysis.json  master_comparison.csv
experiments/v1/router/: threshold_curve.json
phases/: __init__.py  phase_1_grounding.py  phase_2_generate.py  phase_3_split.py  phase_4_eda.py  phase_5_train_classical.py  phase_6_train_transformers.py  phase_7_evaluate.py  phase_8_router.py
src/backend/: __init__.py
src/backend/api/: __init__.py  main.py  routes_config.py  routes_evaluation.py  routes_generation.py  routes_router.py  routes_training.py
src/backend/config/: __init__.py  distribution.py  industry_configs.py  keys.py  language_configs.py  scenario_configs.py  settings.py
src/backend/evaluation/: __init__.py  ablation.py  comparator.py  cost_simulator.py  error_analyzer.py  plots.py  pymodels.py
src/backend/generation/: __init__.py  example_store.py  examples.json  generator.py  pipeline.py  prompt_factory.py  pymodels.py  splitter.py
src/backend/router/: __init__.py  predictor.py  pymodels.py  threshold_tuner.py
src/backend/shared/: __init__.py  metrics.py  path_resolver.py  script_detector.py  settings_manager.py
src/backend/training/: __init__.py  (+1 more)
src/frontend/: __init__.py  app.py
(+19 files in other folders)
