[project]
name = "sprout-router-classifier"
version = "0.1.0"
description = "Binary LLM router classifier for hSenid Mobile's Sprout chatbot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.30",
    "instructor>=1.2",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "gradio>=4.26",
    "mlflow>=2.13",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "scikit-learn>=1.4",
    "gensim>=4.3",
    "lightgbm>=4.3",
    "xgboost>=2.0",
    "catboost>=1.2",
    "spacy>=3.7",
    "fasttext-wheel>=0.9",
    "transformers>=4.40",
    "datasets>=2.19",
    "accelerate>=0.29",
    "optimum[onnxruntime]>=1.19",
    "optuna>=3.6",
    "optuna-integration[mlflow]>=3.6",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "ty>=0.0.1a8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backend", "src/frontend"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "phases"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # line too long — intentional in examples and docstrings
    "SIM105", # contextlib.suppress — prefer explicit try/except in callbacks
]

[tool.ruff.lint.isort]
known-first-party = ["backend", "frontend"]

[tool.ruff.lint.per-file-ignores]
"src/backend/api/main.py" = ["E402"]  # load_dotenv() must precede all imports
"cli.py"      = ["E402"]              # sys.path.insert before backend imports
"phases/*.py" = ["E402"]